--- a/Near me.html
+++ b/Near me.html
@@ -18,9 +18,9 @@
       </div>
 
 		<div class="containertop">
-			<a href="#" class="btn-blue">Near me</a>
-			<a href="#"class="btn-blue">Volunteering and Jobs</a>
-			<a href="#"class="btn-blue">About us</a>
+			<a href="#" class="btn-bluegaspard">Near me</a>
+			<a href="#"class="btn-bluegaspard">Volunteering and Jobs</a>
+			<a href="#"class="btn-bluegaspard">About us</a>
 		</div>
 
 		<div class="container2">
