--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <div class="topnav">
 	  <a class="active" href="index.html">HOME</a>
 	  <a href="events.html">EVENTS</a>
-	  <a href="quote.html">QUOTE</a>
-	  <a href="near me.html">NEAR ME</a>
+	  <a href="quotes.html">QUOTE</a>
+	  <a href="near_me.html">NEAR ME</a>
 	  <a href="volunteering.html">VOLUNTEERING & JOBS</a>
 	  <a href="about us.html">ABOUT US</a>
 	  <a href="help.html">HELP</a>
