--- a/about us.html
+++ b/about us.html
@@ -9,7 +9,7 @@
 		<div class="topnav"> 	  <a href="index.html">HOME</a> 	  <a href="events.html">EVENTS</a> 	  <a href="quote.html">QUOTE</a> 	  <a href="near me.html">NEAR ME</a> 	  <a href="volunteering.html">VOLUNTEERING & JOBS</a> 	  <a class="active" href="about us.html">ABOUT US</a> </div>
 		
 			<div class="container"
-					<div class="card-elements"> <h1 style="position: center;">ABOUT US</h1> </div>
+					<div class="card"> <h1 style="position: center;">ABOUT US</h1> </div>
 
 			<div class="card-text-left">
 			<p>
