--- a/near me.html
+++ b/near me.html
@@ -35,7 +35,7 @@
 			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2530.686519757906!2d3.041174065783638!3d50.63294002950092!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c2d57ea13025e1%3A0x680c68b6d28d68dd!2sI%C3%89SEG%20School%20of%20Management!5e0!3m2!1sfr!2sfr!4v1604526986645!5m2!1sfr!2sfr" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 		</div>
 
-		<div class="card">
+		<div class="cardnearme">
 			<h2>Parties</h2>
 			<i class="fas fa-arrow-right"></i>
 			<a href="#" class="btn-blue2">SEE THE GALLERY</a>
@@ -51,7 +51,7 @@
 				To buy your ticket, go to Billetweb.fr
 			</h4>
 		</div>
-		<div class="card">
+		<div class="cardnearme">
 			<h2>Open-air</h2>
 			<i class="fas fa-arrow-right"></i>
 			<a href="#" class="btn-blue2">SEE THE GALLERY</a>
