--- a/events.html
+++ b/events.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>EVENTS</title>
+		<title>Events</title>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="css/style.css">
 	</head>
@@ -16,7 +16,7 @@
 	 	 <a href="help.html">HELP</a>
 		</div>
 		<div class="container-menu-events">
-			<h2> Events </h2> 
+			<h2> EVENTS </h2> 
 				<div class="cards-events">
 					<div class="card-events">
 						<img src="images/parties.jpeg" alt="Parties">			
