--- a/about us.html
+++ b/about us.html
@@ -26,12 +26,12 @@
 				<div id="card-menu-profiles">
 
 				<div class="avatar-menu-bouton">
-					<img src="images/lucie avatar.png" class="Avatar-menu-circle">
+					<img src="images/lucie avatar.png" class="Avatar-menu-circle" target="_blank">
 					<a href="https://lucie-ammeux.github.io/my-profile/?fbclid=IwAR136v1iWLirm2R2RUe2gpm1Dd82YOfB3UIZNwVm_i7hZpVY4PKLMqr8aUU"> <button class="btn-avatar">LUCIE</button> </a>
 				</div>
 
 				<div class="avatar-menu-bouton">
-					<img src="images/leah avatar.png" class="Avatar-menu-circle">
+					<img src="images/leah avatar.png" class="Avatar-menu-circle" target="_blank">
 					<a href="https://leahcmb.github.io/my-profile/"><button class="btn-avatar">LEAH</button></a>
 				</div>
 				</div>
@@ -39,11 +39,11 @@
 				<div id="card-menu-profiles">
 
 				<div class="avatar-menu-bouton">
-					<img src="images/thomas avatar.png" class="Avatar-menu-circle">
+					<img src="images/thomas avatar.png" class="Avatar-menu-circle" target="_blank">
 					<a href="https://thomas-cerverra.github.io/my-profile/?fbclid=IwAR2hDVNoCMW6NJKqnwz4ALNn30EHVYx8c3r17sojvz7UFqde8hx7XflQh6U"><button class="btn-avatar">THOMAS</button></a>
 				</div>
 				<div class="avatar-menu-bouton">
-					<img src="images/gaspard avatar.png" class="Avatar-menu-circle">
+					<img src="images/gaspard avatar.png" class="Avatar-menu-circle" target="_blank">
 					<a href="https://gaspard-canepa.github.io/my-profile/?fbclid=IwAR2hDVNoCMW6NJKqnwz4ALNn30EHVYx8c3r17sojvz7UFqde8hx7XflQh6U"><button class="btn-avatar">GASPARD</button></a>
 				</div>
 				</div>
