--- a/volunteering.html
+++ b/volunteering.html
@@ -8,7 +8,7 @@
 	<body>
 			<div class="topnav"> 	  <a href="index.html">HOME</a> 	  <a href="events.html">EVENTS</a> 	  <a href="quote.html">QUOTE</a> 	  <a href="near me.html">NEAR ME</a> 	  <a class="active" href="volunteering.html">VOLUNTEERING & JOBS</a> 	  <a  href="about us.html">ABOUT US</a> </div>
 		
-		<div class="container">
+		<div class="container-page">
 			<div class="card"> <h1>VOLUNTEERING AND JOBS</h1> </div>
 			<div class="card">
 			<p>
