--- a/volunteering.html
+++ b/volunteering.html
@@ -6,7 +6,15 @@
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
-			<div class="topnav"> 	  <a href="index.html">HOME</a> 	  <a href="events.html">EVENTS</a> 	  <a href="quote.html">QUOTE</a> 	  <a href="near me.html">NEAR ME</a> 	  <a class="active" href="volunteering.html">VOLUNTEERING & JOBS</a> 	  <a  href="about us.html">ABOUT US</a> </div>
+			<div class="topnav"> 	
+				<a href="index.html">HOME</a> 	
+				<a href="events.html">EVENTS</a> 	
+				<a href="quote.html">QUOTE</a> 	 
+				<a href="near me.html">NEAR ME</a> 	
+				<a class="active" href="volunteering.html">VOLUNTEERING & JOBS</a> 
+				<a  href="about us.html">ABOUT US</a> 
+				<a href="help.html">HELP</a>
+			</div>
 		
 		<div class="container-page">
 			<div class="card"> <h1>VOLUNTEERING AND JOBS</h1> </div>
