--- a/volunteering.html
+++ b/volunteering.html
@@ -16,7 +16,7 @@
 				<a href="help.html">HELP</a>
 			</div>
 		
-		<div class="container-page">
+		<div class="container-pages">
 			<div class="card"> <h1>VOLUNTEERING AND JOBS</h1> </div>
 			<div class="card">
 			<p>
