--- a/about us.html
+++ b/about us.html
@@ -40,7 +40,7 @@
 
 				<div class="avatar-menu-bouton">
 					<img src="images/leah avatar.png" class="Avatar-menu-circle">
-					<a href="https://leahcmb.github.io/my-profile/"> <button class="btn-avatar" target="_blank">LEAH</button> </a>
+					<a href="https://leahcmb.github.io/my-profile/" target="_blank"> <button class="btn-avatar">LEAH</button> </a>
 				</div>
 				</div>
 
