--- a/about us.html
+++ b/about us.html
@@ -35,7 +35,7 @@
 
 				<div class="avatar-menu-bouton">
 					<img src="images/lucie avatar.png" class="Avatar-menu-circle">
-					<a href="https://lucie-ammeux.github.io/my-profile/?fbclid=IwAR136v1iWLirm2R2RUe2gpm1Dd82YOfB3UIZNwVm_i7hZpVY4PKLMqr8aUU"> <button class="btn-avatar" target="_blank">LUCIE</button> </a>
+					<a href="https://lucie-ammeux.github.io/my-profile/?fbclid=IwAR136v1iWLirm2R2RUe2gpm1Dd82YOfB3UIZNwVm_i7hZpVY4PKLMqr8aUU" target="_blank"> <button class="btn-avatar">LUCIE</button> </a>
 				</div>
 
 				<div class="avatar-menu-bouton">
@@ -48,11 +48,11 @@
 
 				<div class="avatar-menu-bouton">
 					<img src="images/thomas avatar.png" class="Avatar-menu-circle">
-					<a href="https://thomas-cerverra.github.io/my-profile/?fbclid=IwAR2hDVNoCMW6NJKqnwz4ALNn30EHVYx8c3r17sojvz7UFqde8hx7XflQh6U"> <button class="btn-avatar" target="_blank">THOMAS</button> </a>
+					<a href="https://thomas-cerverra.github.io/my-profile/?fbclid=IwAR2hDVNoCMW6NJKqnwz4ALNn30EHVYx8c3r17sojvz7UFqde8hx7XflQh6U" target="_blank"> <button class="btn-avatar">THOMAS</button> </a>
 				</div>
 				<div class="avatar-menu-bouton">
 					<img src="images/gaspard avatar.png" class="Avatar-menu-circle">
-					<a href="https://gaspard-canepa.github.io/my-profile/?fbclid=IwAR2hDVNoCMW6NJKqnwz4ALNn30EHVYx8c3r17sojvz7UFqde8hx7XflQh6U"> <button class="btn-avatar" target="_blank">GASPARD</button> </a>
+					<a href="https://gaspard-canepa.github.io/my-profile/?fbclid=IwAR2hDVNoCMW6NJKqnwz4ALNn30EHVYx8c3r17sojvz7UFqde8hx7XflQh6U" target="_blank"> <button class="btn-avatar">GASPARD</button> </a>
 				</div>
 				</div>
 			</div>		
