--- a/about us.html
+++ b/about us.html
@@ -16,7 +16,7 @@
 			<a href="help.html">HELP</a>
 		</div>
 		
-	
+		<div class="container-pages">
 					<div class="card"> <h1 style="position: center;">ABOUT US</h1> </div>
 
 			<div class="card-text-left">
@@ -55,6 +55,7 @@
 					<a href="https://gaspard-canepa.github.io/my-profile/?fbclid=IwAR2hDVNoCMW6NJKqnwz4ALNn30EHVYx8c3r17sojvz7UFqde8hx7XflQh6U" target="_blank"> <button class="btn-avatar">GASPARD</button> </a>
 				</div>
 				</div>
-			</div>		
+			</div>	
+		</div>
 	</body>
 </html>
