--- a/about us.html
+++ b/about us.html
@@ -30,7 +30,7 @@
 
 			</div>
 
-			<div id="container-menu-profiles">
+			<div class="container-menu-profiles">
 				<div id="card-menu-profiles">
 
 				<div class="avatar-menu-bouton">
