--- a/events.html
+++ b/events.html
@@ -20,21 +20,21 @@
 				<div class="cards-events">
 					<div class="card-events">
 						<img src="images/parties.jpeg" alt="Parties">			
-						<a href="parties.html" target="_blank" class="btn-grey"> Parties </a>
+						<a href="parties.html" class="btn-grey"> Parties </a>
 					</div>
 					<div class="card-events">
 						<img src="images/weddings.jpeg" alt="Weddings">
-						<a href="weddings.html" target="_blank" class="btn-grey"> Weddings </a>
+						<a href="weddings.html" class="btn-grey"> Weddings </a>
 					</div>
 				</div>
 				<div class="cards-events">
 					<div class="card-events">
 						<img src="images/cinemas.jpg" alt="Open air cinema">
-						<a href="cinema.html" target="_blank" class="btn-grey"> Open air cinema </a>
+						<a href="cinema.html" class="btn-grey"> Open air cinema </a>
 					</div>
 					<div class="card-events">
 						<img src="images/seminars.jpeg" alt="Seminars">
-						<a href="seminars.html" target="_blank" class="btn-grey"> Seminars </a>
+						<a href="seminars.html" class="btn-grey"> Seminars </a>
 					</div>
 				</div>			
 		</div>	
