--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <img class="picshome" src="images/dome1.jpg"/>
 
 <img class="picshome" src="images/dome2.jpeg"/> 
-</div>
+</div id="video">
 		<iframe width="600" height="340" src="https://www.youtube.com/embed/ofhC5vQfhMA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 		
