--- a/index.html
+++ b/index.html
@@ -36,9 +36,31 @@
 
 <img class="picshome" src="images/dome2.jpeg"/> 
 </div>
-		<div id="video">
+	<div id="video">
 		<iframe width="600" height="340" src="https://www.youtube.com/embed/ofhC5vQfhMA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                </div>
+         </div>
+<div>
+	<h2>Follow us</h2>
+
+		<ul class="réseaux">
+			<li>
+	 			<a href="https://www.facebook.com/gaspard.canepa">
+	 				 <i class="fab fa-facebook-square"></i>
+	 			</a>
+			</li>
+			<li>
+				<a href="https://twitter.com/?logout=1602786668855">
+					<i class="fab fa-twitter"></i>
+				</a>
+			</li>
+			<li>
+				<a href="https://www.instagram.com/ieseg_school/?hl=fr">
+					<i class="fab fa-instagram"></i>
+				</a>
+			</li>
+
+		</ul>
+</div>
 		
 	</body>
 </html>
