--- a/parties.html
+++ b/parties.html
@@ -36,7 +36,7 @@
 			<img class="avatarlogo" src="images/arras.jpeg" alt="Ville d'Arras">
 		</div>
 		<div class="card-logo">
-			<a href="quote.html" class="btn-blue" target="_blank">Ask for quote</a>
+			<a href="quote.html" class="btn-blue">Ask for quote</a>
 		</div>
 	</body>
 </html>
