--- a/weddings.html
+++ b/weddings.html
@@ -29,7 +29,7 @@
 			</p>
 		</div>
 		<div class="card-logo">
-			<a href="quote.html" class="btn-blue" target="_blank">Ask for quote</a>
+			<a href="quote.html" class="btn-blue">Ask for quote</a>
 		</div>
 	</body>
 </html>
