--- a/index.html
+++ b/index.html
@@ -43,7 +43,20 @@
 		
 	
 	<div>
-	<h2> Follow us <h/2>
+		<h2> Follow us <h/2>
+			<ul class="list-inline">
+				<li>
+					<a href="https://www.facebook.com/lucie.ammeux" target="_blank">
+						<i class="fab fa-facebook-square"></i>
+					</a>
+				</li>
+				<li>
+					<a href="https://www.instagram.com/lucieammeux/" target="_blank">
+						<i class="fab fa-instagram-square"></i>
+					</a>
+				</li>	
+			</ul>
+		
 	</div>
 </div>	
 	</body>
