--- a/near me.html
+++ b/near me.html
@@ -34,7 +34,7 @@
 		<div class="cardnearme">
 			<h2>Parties</h2>
 			<i class="fas fa-arrow-right"></i>
-			<a href="#" class="btn-blue2">SEE THE GALLERY</a>
+			<a href="galleryparties.html" class="btn-blue2">SEE THE GALLERY</a>
 		</div>
 
 		<div id="container5">
