--- a/galleryparties.html
+++ b/galleryparties.html
@@ -14,7 +14,7 @@
   <p>Click on the images below:</p>
 	</div>
 
-<div class="container">
+<div class="container-pages">
 
 <div class="row">
   <div class="column">
