--- a/galleryweddings.html
+++ b/galleryweddings.html
@@ -13,7 +13,7 @@
   <p>Click on the images below:</p>
 	</div>
 
-<div class="container">
+<div class="container-pages">
 
 <div class="row">
   <div class="column">
