--- a/galleryweddings.html
+++ b/galleryweddings.html
@@ -9,7 +9,7 @@
 		<div class="topnav"> 	  <a href="index.html">HOME</a> 	  <a href="events.html">EVENTS</a> 	  <a href="quote.html">QUOTE</a> 	  <a href="near me.html">NEAR ME</a> 	  <a href="volunteering.html">VOLUNTEERING & JOBS</a> 	  <a class="active" href="about us.html">ABOUT US</a> </div>
 
 	<div style="text-align:center">
-  <h2>Tabbed Image Gallery</h2>
+  <h2>Weddings Gallery</h2>
   <p>Click on the images below:</p>
 	</div>
 
