--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<title>Air events</title>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="css/style.css">
+		<script src="https://kit.fontawesome.com/69198d5a99.js" crossorigin="anonymous"></script>
 	</head>
 
 	<body>
@@ -43,20 +44,25 @@
 		
 	
 	<div>
-		<h2> Follow us <h/2>
-			<ul class="list-inline">
-				<li>
-					<a href="https://www.facebook.com/lucie.ammeux" target="_blank">
-						<i class="fab fa-facebook-square"></i>
-					</a>
-				</li>
-				<li>
-					<a href="https://www.instagram.com/lucieammeux/" target="_blank">
-						<i class="fab fa-instagram-square"></i>
-					</a>
-				</li>	
-			</ul>
-		
+		<h2>Follow IÉSEG on social media</h2>
+		<ul class="list-inline">
+			<li>
+				<a href="https://www.facebook.com/ieseg.school.of.management/" target="_blank">
+					<i class="fab fa-facebook"></i>
+
+				</a>
+
+			</li>
+
+			<li>
+				<a href="https://www.instagram.com/ieseg_school/" target="_blank">
+					<i class="fab fa-instagram"></i>
+
+				</a>
+			</li>
+
+
+		</ul>
 	</div>
 </div>	
 	</body>
