--- a/galleryseminars.html
+++ b/galleryseminars.html
@@ -17,16 +17,16 @@
 
 <div class="row">
   <div class="column">
-    <img src="images/galleryparties1.jpg" style="width:100%" onclick="myFunction(this);">
+    <img src="images/galleryseminar1.jpg" style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="images/galleryparties2.jpg" style="width:100%" onclick="myFunction(this);">
+    <img src="images/galleryseminar2.jpg" style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="images/galleryparties3.jpg" style="width:100%" onclick="myFunction(this);">
+    <img src="images/galleryseminar3.jpg" style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="images/galleryparties4.jpeg" style="width:100%"  onclick="myFunction(this);">
+    <img src="images/galleryseminar4.jpeg" style="width:100%"  onclick="myFunction(this);">
   </div>
 </div>
 
