--- a/near me.html
+++ b/near me.html
@@ -25,8 +25,7 @@
 
 		<div class="container3">
 			<p>
-				Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-		</div>
+		Air'events organizes unique and ephemeral events near you. An opportunity to get together and create unforgettable memories.	</p>	</div>
 		<div class="container4">
 			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2530.686519757906!2d3.041174065783638!3d50.63294002950092!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c2d57ea13025e1%3A0x680c68b6d28d68dd!2sI%C3%89SEG%20School%20of%20Management!5e0!3m2!1sfr!2sfr!4v1604526986645!5m2!1sfr!2sfr" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 		</div>
@@ -39,8 +38,7 @@
 
 		<div id="container5">
 			<p>
-			Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-			</p>
+			Air'events offers you parties in its huge inflatable structure! Take advantage of the passage of the event near you to meet with friends and spend an unforgettable moment. The parties are sometimes themed so get ready to put on your best costume. To check if there are still places left or to order yours, go to the link just below			</p>
 		</div>
 		<div>
 			<h4>
@@ -50,11 +48,12 @@
 		<div class="cardnearme">
 			<h2>Open-air</h2>
 			<i class="fas fa-arrow-right"></i>
-			<a href="#" class="btn-blue2">SEE THE GALLERY</a>
+			<a href="gallerycinema.html" class="btn-blue2">SEE THE GALLERY</a>
 		</div>
 		<div id="container5">
 			<p>
-			Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+Air'events offers you open air cinema on a large inflatable screen! Take advantage of the passage of the event near you to meet with friends or family and spend an unforgettable evening. The choice of films is chosen and voted on our social networks. If you have a film proposal or want to take part in the vote, join us on the social networks. To check if there are still places available or to order yours, go to the link just below
+
 			</p>
 		</div>
 		<div>
