--- a/gallerycinema.html
+++ b/gallerycinema.html
@@ -17,16 +17,16 @@
 
 <div class="row">
   <div class="column">
-    <img src="images/galleryparties1.jpg" style="width:100%" onclick="myFunction(this);">
+    <img src="images/gallerycinema1.jpg" style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="images/galleryparties2.jpg" style="width:100%" onclick="myFunction(this);">
+    <img src="images/gallerycinema2.jpg" style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="images/galleryparties3.jpg" style="width:100%" onclick="myFunction(this);">
+    <img src="images/gallerycinema3.jpg" style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="images/galleryparties4.jpeg" style="width:100%"  onclick="myFunction(this);">
+    <img src="images/gallerycinema4.jpeg" style="width:100%"  onclick="myFunction(this);">
   </div>
 </div>
 
