--- a/parties.html
+++ b/parties.html
@@ -38,5 +38,11 @@
 		<div class="card-logo">
 			<a href="quote.html" class="btn-blue">Ask for quote</a>
 		</div>
+		<div class="card-logo">
+			<a href="galleriesparties.html" class="btn-blue">See the Gallery</a>
+		</div>
+		
+			
+			
 	</body>
 </html>
