--- a/volunteering.html
+++ b/volunteering.html
@@ -21,7 +21,7 @@
 			<div class="card"> <h1>VOLUNTEERING AND JOBS</h1> </div>
 			<div class="card">
 			<p>
-			Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+			During our events, a helping hand would not be refused! If you want to participate in a unique event and create a professional experience in an original setting where positivity is the rule, join us! 
 			</div>
 
 		
