--- a/parties.html
+++ b/parties.html
@@ -39,7 +39,7 @@
 			<a href="quote.html" class="btn-blue">Ask for quote</a>
 		</div>
 		<div class="card-logo">
-			<a href="galleriesparties.html" class="btn-blue">See the Gallery</a>
+			<a href="galleryparties.html" class="btn-blue">See the Gallery</a>
 		</div>
 		
 			
