--- a/gallerycinema.html
+++ b/gallerycinema.html
@@ -26,7 +26,7 @@
     <img src="images/gallerycinema3.jpg" style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="images/gallerycinema4.jpeg" style="width:100%"  onclick="myFunction(this);">
+    <img src="images/gallerycinema4.jpg" style="width:100%"  onclick="myFunction(this);">
   </div>
 </div>
 
