--- a/galleryseminars.html
+++ b/galleryseminars.html
@@ -26,7 +26,7 @@
     <img src="images/galleryseminar3.jpg" style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="images/galleryseminar4.jpeg" style="width:100%"  onclick="myFunction(this);">
+    <img src="images/galleryseminar4.jpg" style="width:100%"  onclick="myFunction(this);">
   </div>
 </div>
 
