--- a/galleryweddings.html
+++ b/galleryweddings.html
@@ -26,7 +26,7 @@
     <img src="images/gallerywedding3.jpg" style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="images/gallerywedding4.jpeg" style="width:100%"  onclick="myFunction(this);">
+    <img src="images/gallerywedding4.jpg" style="width:100%"  onclick="myFunction(this);">
   </div>
 </div>
 
