--- a/about us.html
+++ b/about us.html
@@ -21,7 +21,11 @@
 
 			<div class="card-text-left">
 			<p>
-			Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+			We are 4 IESEG students in Master 1 in digital specialization. This is our website for Air'events, an event agency near Lille. We propose events for professionals, companies, local authorities, etc... 
+We also propose ephemeral events for individuals who simply want to take part in an event as a participant and not as an organizer. 
+
+Motivated and curious, the Air'events team hopes that you will take as much pleasure in browsing this site as we did in creating it.
+ 
 			</div>
 
 			<div class="card-pictures-right"> 
