--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		
 	
 	<div>
-		<h2>Follow IÉSEG on social media</h2>
+		<h2>Follow us on social media</h2>
 		<ul class="list-inline">
 			<li>
 				<a href="https://www.facebook.com/ieseg.school.of.management/" target="_blank">
