--- a/seminars.html
+++ b/seminars.html
@@ -38,5 +38,8 @@
 		<div class="card-logo">
 			<a href="quote.html" class="btn-blue">Ask for quote</a>
 		</div>
+		<div class="card-logo">
+			<a href="galleryseminars.html" class="btn-blue">See the Gallery</a>
+		</div>
 	</body>
 </html>
