--- a/galleryparties.html
+++ b/galleryparties.html
@@ -7,7 +7,13 @@
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
-		<div class="topnav"> 	  <a href="index.html">HOME</a> 	  <a href="events.html">EVENTS</a> 	  <a href="quote.html">QUOTE</a> 	  <a href="near me.html">NEAR ME</a> 	  <a href="volunteering.html">VOLUNTEERING & JOBS</a> 	  <a class="active" href="about us.html">ABOUT US</a> </div>
+		<a href="index.html">HOME</a> 	
+			<a class="active" href="events.html">EVENTS</a> 	 
+			<a href="quote.html">QUOTE</a> 	  
+			<a href="near me.html">NEAR ME</a> 	
+			<a href="volunteering.html">VOLUNTEERING & JOBS</a> 	 
+			<a href="about us.html">ABOUT US</a> </div>
+			<a href="help.html">HELP</a>
 
 	<div style="text-align:center">
   <h2>Parties Gallery</h2>
