--- a/galleryseminars.html
+++ b/galleryseminars.html
@@ -11,8 +11,9 @@
 			<a href="quote.html">QUOTE</a> 	  
 			<a href="near me.html">NEAR ME</a> 	
 			<a href="volunteering.html">VOLUNTEERING & JOBS</a> 	 
-			<a href="about us.html">ABOUT US</a> </div>
+			<a href="about us.html">ABOUT US</a> 
 			<a href="help.html">HELP</a>
+		</div>
 
 	<div style="text-align:center">
   <h2>Seminars Gallery</h2>
