--- a/galleryparties.html
+++ b/galleryparties.html
@@ -7,7 +7,8 @@
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
-		<a href="index.html">HOME</a> 	
+		<div class="topnav"> 	
+			<a href="index.html">HOME</a> 	
 			<a class="active" href="events.html">EVENTS</a> 	 
 			<a href="quote.html">QUOTE</a> 	  
 			<a href="near me.html">NEAR ME</a> 	
